[package]
name = "font-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
clap = "2.33.3"

[dependencies.windows]
version = "0.27.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
]
